--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,7 @@
                     -->		
                     <nav>
                         <ul id="nav-ul">
+                            <li class="nav-li"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-li"><a class="nav-link" href="about.html">About</a></li>
                             <li class="nav-li"><a class="nav-link" href="experience.html">Experience</a></li>
                             <li class="nav-li"><a class="nav-link" href="projects.html">Projects</a></li>
